--- a/templates/tagmanager.mustache
+++ b/templates/tagmanager.mustache
@@ -15,14 +15,9 @@
     </div>
     
     <div class="col-md-6">
-        <form method="POST" enctype="multipart/form-data" class="p-3 border rounded mb-4">
-            <h5>Upload Tag File</h5>
-            <div class="mb-3">
-                <label for="tagfile" class="form-label">CSV File</label>
-                <input type="file" class="form-control" id="tagfile" name="tagfile">
-            </div>
-            <button type="submit" class="btn btn-primary">Upload Tags</button>
-        </form>
+        <!-- moodleform filepicker -->
+        {{{formhtml}}}
+        <!-- end moodleform filepicker -->
     </div>
 </div>
 
